--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -81,29 +81,111 @@
         </div>
 
       </div>
-
       <div class="row">
+        <div class="col-lg-3">
+
+          <div class="box">
+
+            <mat-icon aria-hidden="false" aria-label="Example home icon" class="user-avatar">account_circle</mat-icon>
+            <hr class="inbox-line">
+            <p class="name">User Name</p>
+            <p class="designation">Designation</p>
+            <hr class="inbox-line2">
+            <p class="connections">Connections</p>
+            <p class="count">400</p>
+            <p class="grow">Grow your network</p>
+            <hr class="inbox-line3">
+            <p class="access">Access exclusive tools & insights </p>
+            <p class="premium">Try Premium for free</p>
+            <hr class="inbox-line4">
+            <mat-icon aria-hidden="false" aria-label="Example home icon" class="bookmark">bookmark</mat-icon>
+            <p class="my-items">My items</p>
+          </div>
+
+
+        </div>
         <div class="col-lg-5">
+
+
           <div class="rectangle">
             <mat-icon aria-hidden="false" aria-label="Example home icon" class="user-icon">account_circle</mat-icon>
             <input matInput type="text" placeholder="Start a post" name="post" class="post-input">
-            <ul>
-              <mat-icon aria-hidden="false" aria-label="Example  icon" class="input-icon">image</mat-icon>
-              <span>Photo</span>
-              <mat-icon aria-hidden="false" aria-label="Example  icon" class="input-icon">smart_display</mat-icon>
-              <span>Video</span>
-              <mat-icon aria-hidden="false" aria-label="Example  icon" class="input-icon">event</mat-icon>
-              <span>Event</span>
-              <mat-icon aria-hidden="false" aria-label="Example  icon" class="input-icon">newspaper</mat-icon>
-              <span>Write Article</span>
-            </ul>
-            
+            <div class="post-icons">
+              <div class="iconone">
+                <div>
+                  <mat-icon aria-hidden="false" aria-label="Example  icon" class="photo-icon">image</mat-icon>
+                </div>
+                <div>
+                  <span class="photo-text">Photo</span>
+                </div>
+              </div>
+              <div class="iconone">
+                <div>
+                  <mat-icon aria-hidden="false" aria-label="Example  icon" class="photo-icon">smart_display</mat-icon>
+                </div>
+                <div>
+                  <span class="photo-text">Video</span>
+                </div>
+              </div>
+              <div class="iconone">
+                <div>
+                  <mat-icon aria-hidden="false" aria-label="Example  icon" class="photo-icon">event</mat-icon>
+                </div>
+                <div>
+                  <span class="photo-text">Event</span>
+                </div>
+              </div>
+              <div class="iconone">
+                <div>
+                  <mat-icon aria-hidden="false" aria-label="Example  icon" class="photo-icon">newspaper</mat-icon>
+                </div>
+                <div>
+                  <span class="photo-text">Write article</span>
+                </div>
+              </div>
+
+
+
+
+            </div>
+
+
+
+
+          </div>
+
+
+
+        </div>
+        <div class="col-lg-4">
+
+
+
+          <div class="rightside-box">
+            <h3 class="linkedin-news">LinkedIn News</h3>
+            <mat-icon aria-hidden="false" aria-label="Example  icon" class="info-icon">info</mat-icon>
+            <li>Indian boardrooms get younger
+              <p class="news1">1d ago . 1,356 readers</p>
+            </li>
+            <li>Infosys moves to tier 2, too
+              <p class="news2">1d ago . 2,458 readers</p>
+            </li>
+            <li>Coinbase cuts India workforce by 8%
+              <p class="news3">22h ago . 2,968 readers</p>
+            </li>
+            <li>Overcome impostor syndrome at work
+              <p class="news4">1d ago . 2,392 readers</p>
+            </li>
+            <li>Age no bar for job seeking
+              <p class="news5">3d ago . 10,432 readers</p>
+            </li>
+            <p class="show-more">Show more</p>
+            <mat-icon aria-hidden="false" aria-label="Example  icon" class="showmore-icon">expand_more</mat-icon>
           </div>
 
         </div>
 
       </div>
-
       <div class="row">
         <div class="col-lg-5">
           <mat-card class="example-card">
@@ -123,22 +205,108 @@
 
             <h3>
               <mat-icon aria-hidden="false" aria-label="Example  icon" class="thumb-icon">thumb_up</mat-icon>
-              
+
               1,23,456 and others
-            
+
             </h3>
             <hr>
 
             <mat-card-actions>
-              <button mat-button><mat-icon aria-hidden="false" aria-label="Example  icon" class="thumb-up-icon">thumb_up_off_alt</mat-icon><span>Like</span></button>
-              <button mat-button><mat-icon aria-hidden="false" aria-label="Example  icon" class="comment-icon">comment</mat-icon><span>Comment</span></button> 
-              <button mat-button><mat-icon aria-hidden="false" aria-label="Example  icon" class="share-icon">reply</mat-icon><span>Share</span></button>
-              <button mat-button><mat-icon aria-hidden="false" aria-label="Example  icon" class="send-icon">send</mat-icon><span>Send</span></button>
+              <button mat-button>
+                <mat-icon aria-hidden="false" aria-label="Example  icon" class="thumb-up-icon">thumb_up_off_alt
+                </mat-icon><span>Like</span>
+              </button>
+              <button mat-button>
+                <mat-icon aria-hidden="false" aria-label="Example  icon" class="comment-icon">comment</mat-icon>
+                <span>Comment</span>
+              </button>
+              <button mat-button>
+                <mat-icon aria-hidden="false" aria-label="Example  icon" class="share-icon">reply</mat-icon>
+                <span>Share</span>
+              </button>
+              <button mat-button>
+                <mat-icon aria-hidden="false" aria-label="Example  icon" class="send-icon">send</mat-icon>
+                <span>Send</span>
+              </button>
             </mat-card-actions>
           </mat-card>
 
         </div>
-      
+
+      </div>
+
+      <!-- <div class="row"> -->
+
+
+
+        <!-- <div class="col-lg-5">
+          <div class="rectangle">
+            <mat-icon aria-hidden="false" aria-label="Example home icon" class="user-icon">account_circle</mat-icon>
+            <input matInput type="text" placeholder="Start a post" name="post" class="post-input">
+            <ul>
+              <mat-icon aria-hidden="false" aria-label="Example  icon" class="input-iconone">image</mat-icon>
+              <span class="icon-text">Photo</span>
+              <mat-icon aria-hidden="false" aria-label="Example  icon" class="input-icon">smart_display</mat-icon>
+              <span class="icon-text">Video</span>
+              <mat-icon aria-hidden="false" aria-label="Example  icon" class="input-icon">event</mat-icon>
+              <span class="icon-text">Event</span>
+              <mat-icon aria-hidden="false" aria-label="Example  icon" class="input-icon">newspaper</mat-icon>
+              <span class="icon-text">Write article</span>
+            </ul>
+
+          </div>
+
+        </div> -->
+
+      <!-- </div> -->
+
+      <div class="row">
+        <!-- <div class="col-lg-5">
+          <mat-card class="example-card">
+            <mat-card-header>
+              <div mat-card-avatar class="example-header-image"></div>
+              <h2>Terralogic Inc.</h2>
+              <mat-icon aria-hidden="false" aria-label="Example  icon" class="dot-icon">more_horiz</mat-icon>
+              <h4>24,683 followers</h4>
+              <h6>1w <mat-icon aria-hidden="false" aria-label="Example  icon" class="globe-icon">public</mat-icon>
+              </h6>
+
+            </mat-card-header>
+            <mat-card-content>
+              <p>Most business owners have the ambition to grow their companies bigger and stronger.</p>
+            </mat-card-content>
+            <img mat-card-image src="../assets/images/linkedin 2.jpeg" alt="post1">
+
+            <h3>
+              <mat-icon aria-hidden="false" aria-label="Example  icon" class="thumb-icon">thumb_up</mat-icon>
+
+              1,23,456 and others
+
+            </h3>
+            <hr>
+
+            <mat-card-actions>
+              <button mat-button>
+                <mat-icon aria-hidden="false" aria-label="Example  icon" class="thumb-up-icon">thumb_up_off_alt
+                </mat-icon><span>Like</span>
+              </button>
+              <button mat-button>
+                <mat-icon aria-hidden="false" aria-label="Example  icon" class="comment-icon">comment</mat-icon>
+                <span>Comment</span>
+              </button>
+              <button mat-button>
+                <mat-icon aria-hidden="false" aria-label="Example  icon" class="share-icon">reply</mat-icon>
+                <span>Share</span>
+              </button>
+              <button mat-button>
+                <mat-icon aria-hidden="false" aria-label="Example  icon" class="send-icon">send</mat-icon>
+                <span>Send</span>
+              </button>
+            </mat-card-actions>
+          </mat-card>
+
+        </div> -->
+
       </div>
 
       <div class="row">
@@ -154,28 +322,41 @@
 
             </mat-card-header>
             <mat-card-content>
-              <p>Hello Everyone...Most business owners have the ambition to grow their companies bigger and stronger.</p>
+              <p>Hello Everyone...Most business owners have the ambition to grow their companies bigger and stronger.
+              </p>
             </mat-card-content>
             <img mat-card-image src="../assets/images/linkedin post2.jpeg" alt="post2">
 
             <h3>
               <mat-icon aria-hidden="false" aria-label="Example  icon" class="thumb-icon">thumb_up</mat-icon>
-              
+
               25,456 and others
-            
+
             </h3>
             <hr>
 
             <mat-card-actions>
-              <button mat-button><mat-icon aria-hidden="false" aria-label="Example  icon" class="thumb-up-icon">thumb_up_off_alt</mat-icon><span>Like</span></button>
-              <button mat-button><mat-icon aria-hidden="false" aria-label="Example  icon" class="comment-icon">comment</mat-icon><span>Comment</span></button> 
-              <button mat-button><mat-icon aria-hidden="false" aria-label="Example  icon" class="share-icon">reply</mat-icon><span>Share</span></button>
-              <button mat-button><mat-icon aria-hidden="false" aria-label="Example  icon" class="send-icon">send</mat-icon><span>Send</span></button>
+              <button mat-button>
+                <mat-icon aria-hidden="false" aria-label="Example  icon" class="thumb-up-icon">thumb_up_off_alt
+                </mat-icon><span>Like</span>
+              </button>
+              <button mat-button>
+                <mat-icon aria-hidden="false" aria-label="Example  icon" class="comment-icon">comment</mat-icon>
+                <span>Comment</span>
+              </button>
+              <button mat-button>
+                <mat-icon aria-hidden="false" aria-label="Example  icon" class="share-icon">reply</mat-icon>
+                <span>Share</span>
+              </button>
+              <button mat-button>
+                <mat-icon aria-hidden="false" aria-label="Example  icon" class="send-icon">send</mat-icon>
+                <span>Send</span>
+              </button>
             </mat-card-actions>
           </mat-card>
 
         </div>
-      
+
       </div>
 
       <div class="row">
@@ -191,29 +372,44 @@
 
             </mat-card-header>
             <mat-card-content>
-              <p>There's a difference between doing something we don't really care about and doing something we love.</p>
+              <p>There's a difference between doing something we don't really care about and doing something we love.
+              </p>
             </mat-card-content>
             <img mat-card-image src="../assets/images/linkedin post 3.jpeg" alt="post3">
 
             <h3>
               <mat-icon aria-hidden="false" aria-label="Example  icon" class="thumb-icon">thumb_up</mat-icon>
-              
+
               32,456 and others
-            
+
             </h3>
             <hr>
 
             <mat-card-actions>
-              <button mat-button><mat-icon aria-hidden="false" aria-label="Example  icon" class="thumb-up-icon">thumb_up_off_alt</mat-icon><span>Like</span></button>
-              <button mat-button><mat-icon aria-hidden="false" aria-label="Example  icon" class="comment-icon">comment</mat-icon><span>Comment</span></button> 
-              <button mat-button><mat-icon aria-hidden="false" aria-label="Example  icon" class="share-icon">reply</mat-icon><span>Share</span></button>
-              <button mat-button><mat-icon aria-hidden="false" aria-label="Example  icon" class="send-icon">send</mat-icon><span>Send</span></button>
+              <button mat-button>
+                <mat-icon aria-hidden="false" aria-label="Example  icon" class="thumb-up-icon">thumb_up_off_alt
+                </mat-icon><span>Like</span>
+              </button>
+              <button mat-button>
+                <mat-icon aria-hidden="false" aria-label="Example  icon" class="comment-icon">comment</mat-icon>
+                <span>Comment</span>
+              </button>
+              <button mat-button>
+                <mat-icon aria-hidden="false" aria-label="Example  icon" class="share-icon">reply</mat-icon>
+                <span>Share</span>
+              </button>
+              <button mat-button>
+                <mat-icon aria-hidden="false" aria-label="Example  icon" class="send-icon">send</mat-icon>
+                <span>Send</span>
+              </button>
             </mat-card-actions>
           </mat-card>
 
         </div>
-      
+
       </div>
+
+
 
     </div>
   </header>
